--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
 
   # Code generation for immutable classes
   freezed: ^2.5.2
+  freezed_annotation: ^2.4.1
 
   # Networking 
   dio: ^5.4.3+1
@@ -44,7 +45,7 @@ dependencies:
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
   connectivity_plus: ^6.0.3
-
+  pretty_dio_logger: ^1.3.1
   # Build Runner 
   build_runner: ^2.4.11
 
