--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,53 +28,36 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.4.11
+  camera: ^0.11.0+1
+  connectivity_plus: ^6.0.3
+  dio: ^5.4.3+1
+  firebase_core: ^3.1.1
   flutter:
     sdk: flutter
-
- # This Section For App Splash Screen
+  flutter_bloc: ^8.1.6
   flutter_native_splash: ^2.4.0
-
-  # Code generation for immutable classes
+  flutter_screenutil: ^5.9.3
+  flutter_secure_storage: ^9.2.2
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
-
-  # Networking 
-  dio: ^5.4.3+1
+  get_it: ^7.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
+  permission_handler: ^11.3.1
+  pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
-  json_serializable: ^6.8.0
-  json_annotation: ^4.9.0
-  connectivity_plus: ^6.0.3
-  pretty_dio_logger: ^1.3.1
-  # Build Runner 
-  build_runner: ^2.4.11
-
-  # Dependency Injection
-  get_it: ^7.7.0
-
-  # State Management
-  flutter_bloc: ^8.1.6
-
-  # Firebase Packages
-  firebase_core: ^3.1.1
-
-  # Local Storage And Cache
-  hive_flutter: ^1.1.0
-  hive: ^2.2.3
   shared_preferences: ^2.2.3
-  flutter_secure_storage: ^9.2.2
-
-  # Responsive UI
-  flutter_screenutil: ^5.9.3
+  video_player: ^2.9.0
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  #------------------------
-  # Launcher Icons
-  #------------------------
 flutter_launcher_icons:
   android: true
   ios: true
@@ -83,7 +66,6 @@ flutter_launcher_icons:
   adaptive_icon_foreground: "assets/images/app_icon.png"
 
   cupertino_icons: ^1.0.6
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -94,7 +76,6 @@ flutter_launcher_icons:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -106,24 +87,22 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  #English Font
+    #English Font
     - family: Designer
       fonts:
         - asset: assets/fonts/Designer.otf
           weight: 500
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
